--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patterns <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="patterns/blog.html">Blog index page</a></li>
-                            <li><a href="patterns/post.html">Blog post page</a></li>
-                            <li><a href="patterns/portfolio.html">Portfolio thumbnail page</a></li>
-                            <li><a href="patterns/detail.html">Portfolio detail page</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="index.html">Nav Link</a></li>
+                    <li><a href="index.html">Nav Link</a></li>
+                    <li><a href="index.html">Nav Link</a></li>
                 </ul>
             </div>
         </div>
