--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="sr-only"><a href="#content">skip to page content</a></div>
 <header role="banner" id="top">
     <nav role="navigation" class="navbar navbar-inverse">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
