Add header and footer classes and main section element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="home">
 <div class="sr-only"><a href="#content">skip to page content</a></div>
-<header role="banner" id="top">
+<header class="site-header" id="top" role="banner">
     <nav role="navigation" class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -42,7 +42,7 @@
         </div>
     </nav>
 </header>
-<div id="content" class="container-fluid">
+<section class="container-fluid" id="content">
     <div class="row">
         <main id="main" role="main" class="col-sm-9">
             <h1>Heading 1</h1>
@@ -90,8 +90,8 @@
         <aside role="complementary" class="col-sm-3">
         </aside>
     </div>
-</div>
-<footer role="contentinfo">
+</section>
+<footer class="site-footer" role="contentinfo">
     <div class="container-fluid">
         <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
         <p class="small pull-right"><a href="#top"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
