--- a/bootstrap-header.html
+++ b/bootstrap-header.html
@@ -21,20 +21,26 @@
 <body class="home">
 <div class="sr-only"><a href="#content">skip to page content</a></div>
 <header class="site-header" id="top" role="banner">
-    <div class="container-fluid">
-        <a href="index.html"><img src="images/logo.svg" class="logo" alt="Logo"></a>
-            <span class="nav-toggle">
-                <span class="nav-toggle-text">Menu</span> <span class="fa fa-bars"></span>
-            </span>
-        <nav class="main-navigation" role="navigation">
-            <ul>
-                <li><a href="index.html">Nav Link</a></li>
-                <li><a href="index.html">Nav Link</a></li>
-                <li><a href="index.html" class="cta">Nav Link</a></li>
-                <li><a href="index.html" class="cta-inverse">Nav Link</a></li>
-            </ul>
-        </nav>
-    </div>
+    <nav role="navigation" class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Bootstrap Starter Template</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">Nav Link</a></li>
+                    <li><a href="index.html">Nav Link</a></li>
+                    <li><a href="index.html">Nav Link</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
 <section class="container-fluid" id="content">
     <div class="row">
