Add button styles

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
         <li>list item</li>
         <li>list item</li>
       </ul>
+
+      <h4>Buttons</h4><br>
+      <p>
+        <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
+        <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
+        <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
+        <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
+      </p><br>
+
     </main>
     <aside role="complementary" class="col-sm-3">
     </aside>
