Add some clarifying text

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <li>list item</li>
       </ul>
 
-      <h4>Buttons</h4><br>
-      <p>
+      <h4>Buttons</h4>
+      <p>Using class <code>.cta</code> (<em>call to action</em>) to avoid styling conflicts with Bootstrap <code>.btn</code> class.</p>
         <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
         <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
         <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
         <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
-      </p><br>
+      <br>
 
     </main>
     <aside role="complementary" class="col-sm-3">
