--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
   <!-- webfonts -->
   <!-- analytics -->
 </head>
-<body class="home">
+<body class="example">
 <div class="sr-only"><a href="#content">skip to page content</a></div>
 
 <header class="site-header" id="top" role="banner">
@@ -39,6 +39,17 @@
       </nav>
   </div>
 </header>
+
+<section class="hero" id="hero">
+  <div class="container-fluid">
+    <div class="hero-inner">
+      <h1>Large hero message</h1>
+      <p>Additional hero details dolor sit amet, consectetuer adipiscing elit.</p>
+      <a href="#" class="cta">Link somewhere <i class="fa fa-chevron-right"></i></a>
+      <a href="#" class="cta-inverse">Link elsewhere <i class="fa fa-chevron-right"></i></a>
+    </div>
+  </div>
+</section>
 
 <section class="container-fluid" id="content">
   <div class="row">
@@ -96,7 +107,7 @@
     <aside role="complementary" class="col-sm-3">
       <nav>
         <ul>
-          <li><a href="example.html">Hero</a></li>
+          <li></li>
         </ul>
       </nav>
     </aside>
