Full width markup

--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
   <!-- analytics -->
 </head>
 <body class="example">
-<div class="sr-only"><a href="#content">skip to page content</a></div>
+<div class="sr-only"><a href="#hero">skip to page content</a></div>
 
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
@@ -51,65 +51,41 @@
   </div>
 </section>
 
+<section class="full-width fw-primary text-center">
+  <div class="container-fluid">
+    <div class="wrap-inner">
+      <h2>Important marketing message.</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
+    </div>
+  </div>
+</section>
+
+<section class="full-width fw-alt text-center">
+  <div class="container-fluid">
+    <div class="wrap-inner">
+      <h2>Important marketing message.</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <a href="#" class="cta alt">Some CTA <i class="fa fa-caret-right"></i></a>
+    </div>
+  </div>
+</section>
+
+<section class="full-width fw-highlight text-center">
+  <div class="container-fluid">
+    <div class="wrap-inner">
+      <h2>Important marketing message.</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <a href="#" class="cta-inverse">Some CTA <i class="fa fa-chevron-right"></i></a>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid" id="content">
   <div class="row">
     <main id="main" role="main" class="col-sm-9">
-      <h1>Heading 1</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
-
-      <h2>Heading 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
-
-      <h3>Heading 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
-
-      <h4>Heading 4</h4>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
-
-      <h3>Unordered list</h3>
-      <ul>
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item
-          <ul>
-            <li>list item</li>
-            <li>list item</li>
-            <li>list item</li>
-          </ul>
-        </li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
-      <h4>Unstyled list</h4>
-      <ul class="list-unstyled">
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
-      <h4>Inline list</h4>
-      <ul class="list-inline">
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
-      <h4>Buttons</h4>
-      <p>Using class <code>.cta</code> (<em>call to action</em>) to avoid styling conflicts with Bootstrap <code>.btn</code> class.</p>
-        <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
-      <br>
-
     </main>
     <aside role="complementary" class="col-sm-3">
-      <nav>
-        <ul>
-          <li></li>
-        </ul>
-      </nav>
     </aside>
   </div>
 </section>
