Update demo links

--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
 
     </main>
     <aside role="complementary" class="col-sm-3">
+      <h4>Examples</h4>
       <nav>
         <ul>
           <li><a href="example.html">Hero</a></li>
+          <li><a href="example.html">Full-width sections</a></li>
         </ul>
       </nav>
     </aside>
