--- a/example.html
+++ b/example.html
@@ -26,17 +26,17 @@
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
     <a href="index.html"><img src="images/logo.svg" class="logo" alt="Logo"></a>
-      <span class="nav-toggle">
+    <span class="nav-toggle">
         <span class="nav-toggle-text">Menu</span> <span class="fa fa-bars"></span>
       </span>
-      <nav class="main-navigation" role="navigation">
-        <ul>
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html" class="cta">Nav Link</a></li>
-          <li><a href="index.html" class="cta-inverse">Nav Link</a></li>
-        </ul>
-      </nav>
+    <nav class="main-navigation" role="navigation">
+      <ul>
+        <li><a href="index.html">Nav Link</a></li>
+        <li><a href="index.html">Nav Link</a></li>
+        <li><a href="index.html" class="cta">Nav Link</a></li>
+        <li><a href="index.html" class="cta-inverse">Nav Link</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 
@@ -55,7 +55,8 @@
   <div class="container-fluid">
     <div class="wrap-inner">
       <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus.</p>
       <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
     </div>
   </div>
@@ -65,7 +66,8 @@
   <div class="container-fluid">
     <div class="wrap-inner">
       <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus.</p>
       <a href="#" class="cta alt">Some CTA <i class="fa fa-caret-right"></i></a>
     </div>
   </div>
@@ -75,7 +77,8 @@
   <div class="container-fluid">
     <div class="wrap-inner">
       <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus.</p>
       <a href="#" class="cta-inverse">Some CTA <i class="fa fa-chevron-right"></i></a>
     </div>
   </div>
