--- a/bootstrap-header.html
+++ b/bootstrap-header.html
@@ -3,99 +3,111 @@
 <!--[if IE 9]>     <html class="no-js lte-ie9" lang="en"> <![endif]-->
 <!--[if !IE]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Boilerplate</title>
-<meta name="description" content="">
-<meta name="author" content="Douglas Green">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<!--[if lt IE 9]>
-<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
-<!-- webfonts -->
-<!-- analytics -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Boilerplate</title>
+  <meta name="description" content="">
+  <meta name="author" content="Douglas Green">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <!--[if lt IE 9]>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <!-- webfonts -->
+  <!-- analytics -->
 </head>
 <body class="home">
 <div class="sr-only"><a href="#content">skip to page content</a></div>
 <header class="site-header" id="top" role="banner">
-    <nav role="navigation" class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Bootstrap Starter Template</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Nav Link</a></li>
-                    <li><a href="index.html">Nav Link</a></li>
-                    <li><a href="index.html">Nav Link</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <nav role="navigation" class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Bootstrap Starter Template</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">Nav Link</a></li>
+          <li><a href="index.html">Nav Link</a></li>
+          <li><a href="index.html">Nav Link</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 <section class="container-fluid" id="content">
-    <div class="row">
-        <main id="main" role="main" class="col-sm-9">
-            <h1>Heading 1</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+  <div class="row">
+    <main id="main" role="main" class="col-sm-9">
+      <h1>Heading 1</h1>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget,
+        tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada
+        libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam,
+        tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
 
-            <h2>Heading 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <h2>Heading 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
-            <h3>Heading 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <h3>Heading 3</h3>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
-            <h4>Heading 4</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <h4>Heading 4</h4>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
-            <h3>Unordered list</h3>
-            <ul>
-                <li>list item</li>
-                <li>list item</li>
-                <li>list item
-                    <ul>
-                        <li>list item</li>
-                        <li>list item</li>
-                        <li>list item</li>
-                    </ul>
-                </li>
-                <li>list item</li>
-                <li>list item</li>
-            </ul>
+      <h3>Unordered list</h3>
+      <ul>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item
+          <ul>
+            <li>list item</li>
+            <li>list item</li>
+            <li>list item</li>
+          </ul>
+        </li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
 
-            <h4>Unstyled list</h4>
-            <ul class="list-unstyled">
-                <li>list item</li>
-                <li>list item</li>
-                <li>list item</li>
-            </ul>
+      <h4>Unstyled list</h4>
+      <ul class="list-unstyled">
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
 
-            <h4>Inline list</h4>
-            <ul class="list-inline">
-                <li>list item</li>
-                <li>list item</li>
-                <li>list item</li>
-            </ul>
+      <h4>Inline list</h4>
+      <ul class="list-inline">
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
 
-        </main>
-        <aside role="complementary" class="col-sm-3">
-        </aside>
-    </div>
+    </main>
+    <aside role="complementary" class="col-sm-3">
+    </aside>
+  </div>
 </section>
 <footer class="site-footer" role="contentinfo">
-    <div class="container-fluid">
-        <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
-        <p class="small pull-right"><a href="#top"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
-    </div>
+  <div class="container-fluid">
+    <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
+    <p class="small pull-right"><a href="#top"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
+  </div>
 </footer>
 <script src="//code.jquery.com/jquery-1.12.3.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
