--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
     <a href="index.html"><img src="images/logo.svg" class="logo" alt="Logo"></a>
-      <span class="nav-toggle">
+    <span class="nav-toggle">
         <span class="nav-toggle-text">Menu</span> <span class="fa fa-bars"></span>
       </span>
-      <nav class="main-navigation" role="navigation">
-        <ul>
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html" class="cta">Nav Link</a></li>
-          <li><a href="index.html" class="cta-inverse">Nav Link</a></li>
-        </ul>
-      </nav>
+    <nav class="main-navigation" role="navigation">
+      <ul>
+        <li><a href="index.html">Nav Link</a></li>
+        <li><a href="index.html">Nav Link</a></li>
+        <li><a href="index.html" class="cta">Nav Link</a></li>
+        <li><a href="index.html" class="cta-inverse">Nav Link</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 
@@ -44,16 +44,28 @@
   <div class="row">
     <main id="main" role="main" class="col-sm-9">
       <h1>Heading 1</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget,
+        tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada
+        libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam,
+        tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
 
       <h2>Heading 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
       <h3>Heading 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
       <h4>Heading 4</h4>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
 
       <h5>Heading 5</h5>
       <h6>Heading 6</h6>
@@ -101,21 +113,33 @@
       <h3>Description list</h3>
       <dl>
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
       </dl>
 
       <h4>Inline description</h4>
       <dl class="dl-horizontal">
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
         <dt>Term</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec, auctor quis, purus. Vivamus ut sem.</dd>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
       </dl>
 
       <h2>Basic text formatting</h2>
@@ -132,11 +156,13 @@
 
       <h3>Blockquote</h3>
       <blockquote>
-        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec.&rdquo;</p>
+        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique
+          nec.&rdquo;</p>
         <small>John Smith</small>
       </blockquote>
       <blockquote class="pull-right">
-        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec.&rdquo;</p>
+        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique
+          nec.&rdquo;</p>
         <small>John Smith</small>
       </blockquote>
 
@@ -144,7 +170,9 @@
       <p><abbr title="PHP: Hypertext Preprocessor" class="initialism">PHP</abbr></p>
 
       <h3>Small text</h3>
-      <p><small>Tiny text</small></p>
+      <p>
+        <small>Tiny text</small>
+      </p>
 
       <h3>Alignment</h3>
       <p class="text-left">left</p>
@@ -261,11 +289,12 @@
       </p>
 
       <h2>Buttons</h2>
-      <p>Using class <code>.cta</code> (<em>call to action</em>) to avoid styling conflicts with Bootstrap <code>.btn</code> class.</p>
-        <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
-        <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
+      <p>Using class <code>.cta</code> (<em>call to action</em>) to avoid styling conflicts with Bootstrap
+        <code>.btn</code> class.</p>
+      <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
       <br><br>
 
     </main>
