Drop IE conditionals

--- a/bootstrap-header.html
+++ b/bootstrap-header.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]>  <html class="no-js lte-ie9 oldie" lang="en"> <![endif]-->
-<!--[if IE 9]>     <html class="no-js lte-ie9" lang="en"> <![endif]-->
-<!--[if !IE]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
