--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <section class="container-fluid" id="content">
   <div class="row">
-    <main id="main" role="main" class="col-sm-9">
+    <main class="col-sm-9" id="main" role="main">
       <h1>Heading 1</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget,
         tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada
@@ -165,7 +165,7 @@
       </blockquote>
 
       <h3>Abbreviations</h3>
-      <p><abbr title="PHP: Hypertext Preprocessor" class="initialism">PHP</abbr></p>
+      <p><abbr class="initialism" title="PHP: Hypertext Preprocessor">PHP</abbr></p>
 
       <h3>Small text</h3>
       <p>
@@ -297,7 +297,7 @@
 
     </main>
 
-    <aside role="complementary" class="col-sm-3">
+    <aside class="col-sm-3" role="complementary">
       <h4>Examples</h4>
       <nav>
         <ul>
