--- a/example.html
+++ b/example.html
@@ -84,9 +84,9 @@
 
 <section class="container-fluid" id="content">
   <div class="row">
-    <main id="main" role="main" class="col-sm-9">
+    <main class="col-sm-9" id="main" role="main">
     </main>
-    <aside role="complementary" class="col-sm-3">
+    <aside class="col-sm-3" role="complementary">
     </aside>
   </div>
 </section>
