--- a/bootstrap-header.html
+++ b/bootstrap-header.html
@@ -47,84 +47,25 @@
 <section class="container-fluid" id="content">
   <div class="row">
     <main class="col-sm-9" id="main" role="main">
-      <h1>Heading 1</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget,
-        tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada
-        libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam,
-        tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
-
-      <h2>Heading 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
-        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
-        quam, in condimentum augue lorem non tellus. </p>
-
-      <h3>Heading 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
-        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
-        quam, in condimentum augue lorem non tellus. </p>
-
-      <h4>Heading 4</h4>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
-        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
-        quam, in condimentum augue lorem non tellus. </p>
-
-      <h5>Heading 5</h5>
-      <h6>Heading 6</h6>
-
-      <h2>Lists</h2>
-      <h3>Unordered list</h3>
-      <ul>
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item
-          <ul>
-            <li>list item</li>
-            <li>list item</li>
-            <li>list item</li>
-          </ul>
-        </li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
-      <h4>Unstyled list</h4>
-      <ul class="list-unstyled">
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
-      <h4>Inline list</h4>
-      <ul class="list-inline">
-        <li>list item</li>
-        <li>list item</li>
-        <li>list item</li>
-      </ul>
-
+      <h1>Bootstrap navbar</h1>
+      <p>You would need to modify a few header and page styles to use the Bootstrap navbar component.
+        The styles are currently configured for a custom navbar component.</p>
     </main>
 
     <aside class="col-sm-3" role="complementary">
       <h4>Examples</h4>
       <nav>
         <ul>
-          <li><a href="example.html">Hero</a></li>
-          <li><a href="example.html">Full-width sections</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="example.html">Basic markup</a></li>
+          <li><a href="bootstrap-header.html">Bootstrap header markup</a></li>
+          <li><a href="http://getbootstrap.com/">Bootstrap documentation</a></li>
         </ul>
       </nav>
     </aside>
 
   </div>
 </section>
-
-<footer class="site-footer" role="contentinfo">
-  <div class="container-fluid">
-    <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
-    <p class="small pull-right"><a href="#top"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
-  </div>
-</footer>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
