Rename header file to navbar

--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -58,7 +58,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="example.html">Basic markup</a></li>
-          <li><a href="bootstrap-header.html">Bootstrap header markup</a></li>
+          <li><a href="bootstrap-navbar.html">Bootstrap navbar markup</a></li>
           <li><a href="http://getbootstrap.com/">Bootstrap documentation</a></li>
         </ul>
       </nav>
