--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="example.html">Basic markup</a></li>
-        <li><a href="bootstrap-header.html">Bootstrap header markup</a></li>
+        <li><a href="bootstrap-navbar.html">Bootstrap navbar markup</a></li>
         <li><a href="http://getbootstrap.com/">Bootstrap documentation</a></li>
       </ul>
     </main>
