--- a/example.html
+++ b/example.html
@@ -283,7 +283,7 @@
 
       <h2>Responsive image</h2>
       <p>
-        <img src="http://placehold.it/800x400" class="img-responsive" alt="some image">
+        <img src="https://placehold.it/800x400" class="img-responsive" alt="some image">
       </p>
 
       <h2>Buttons</h2>
