--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
-    <a href="index.html" class="brand"><img src="images/logo.svg" class="logo" alt="Logo"></a>
+    <a href="index.html" class="brand"><img src="images/your-logo.svg" class="logo" alt="Logo"></a>
     <span class="nav-toggle">
         <span class="nav-toggle-text">Menu</span> <span class="fa fa-bars"></span>
       </span>
