Link to content instead of fixed header

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
 <footer class="site-footer" role="contentinfo">
   <div class="container-fluid">
     <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
-    <p class="small pull-right"><a href="#top"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
+    <p class="small pull-right"><a href="#content"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
   </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/jquery.scrollTo.min.js"></script>
+<script src="js/jquery.localScroll.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
