Skip to content

--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
   <!-- analytics -->
 </head>
 <body class="example">
-<div class="sr-only"><a href="#hero">skip to page content</a></div>
+<div class="sr-only"><a href="#content">skip to page content</a></div>
 
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
