--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <section class="container-fluid" id="content">
   <div class="row">
-    <main class="col-sm-9" id="main" role="main">
+    <main class="col-md-9" id="main" role="main">
       <h4>Examples</h4>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -92,14 +92,14 @@
         <li><a href="http://getbootstrap.com/">Bootstrap documentation</a></li>
       </ul>
     </main>
-    <aside class="col-sm-3" role="complementary"></aside>
+    <aside class="col-md-3" role="complementary"></aside>
   </div>
 </section>
 
 <footer class="site-footer" role="contentinfo">
   <div class="container-fluid">
-    <p class="small pull-left">&copy; Copyright 2015 <i>Company Name</i></p>
-    <p class="small pull-right"><a href="#content"><i class="glyphicon glyphicon-triangle-top"></i> back to top</a></p>
+    <p class="small float-left">&copy; Copyright 2015 <i>Company Name</i></p>
+    <p class="small float-right"><a href="#top">back to top</a></p>
   </div>
 </footer>
 
