Better skip link language

--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -15,7 +15,7 @@
   <!-- analytics -->
 </head>
 <body class="home">
-<a class="sr-only sr-only-focusable" href="#content">skip to page content</a>
+<a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
 <header class="site-header" id="top" role="banner">
   <nav class="navbar navbar-expand-md navbar-light bg-light" role="navigation">
