--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
   <!-- analytics -->
 </head>
 <body class="example">
-<a class="sr-only sr-only-focusable" href="#content">skip to page content</a>
+<a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
 <header class="site-header" id="top" role="banner">
   <div class="container-fluid">
